# moqui_rev

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  DCM_output.txt  README.md  moqui_tps.in  schema_code_directory.md
.github/workflows/: ci.yaml
include/moqui_rev/: library.hpp
logs/: changelog_20251015T143000.json  context_20251015T101900.json  errorlog_20251015T013900.json
moqui/base/: mqi_aperture3d.hpp  mqi_beam_eye_view.cpp  mqi_beam_eye_view.hpp  mqi_beam_module.hpp  mqi_beamlet.hpp  mqi_coarse_to_fine.cpp  mqi_config.cpp  mqi_config.hpp  mqi_ct.hpp  mqi_dicom.hpp  mqi_dynamic_lod.cpp  mqi_dynamic_lod.hpp  mqi_error_check.hpp  mqi_fippel_physics.hpp  mqi_geometry.hpp  mqi_geometry_interface.cpp  mqi_grid3d.hpp  mqi_integration.cpp  mqi_integration.hpp  mqi_io.hpp  mqi_math.cpp  mqi_math.hpp  mqi_matrix.hpp  mqi_memory_optimization.cpp  mqi_p_ionization.hpp  mqi_phase1_integration.cpp  mqi_phase3_coarse_to_fine.cpp  mqi_phase3_integration.hpp  mqi_phase4_beam_eye_view.hpp  mqi_phase4_dynamic_lod.cpp  mqi_phase4_dynamic_lod.hpp  mqi_phase4_plugin_system.cpp  mqi_phase4_voxel_bvh.hpp  mqi_phase_integration.hpp  mqi_physics_constants.hpp  mqi_plugin_system.cpp  mqi_plugin_system.hpp  mqi_po_inelastic.hpp  mqi_rangeshifter.hpp  mqi_rect3d.hpp  (+11 more)
moqui/base/distributions/: mqi_norm_1d.hpp  mqi_pdfMd.hpp  mqi_phsp6d_fanbeam.hpp  mqi_phsp6d_ray.hpp  mqi_phsp6d_uniform.hpp  mqi_uni_1d.hpp
moqui/base/environments/: mqi_tps_env.hpp
moqui/base/materials/: mqi_material.hpp  mqi_material_ct.hpp
moqui/base/scorers/: mqi_scorer_energy_deposit.hpp
moqui/kernel_functions/: mqi_kernel_functions.hpp  mqi_print_data.hpp  mqi_transport.hpp  mqi_upload_data.hpp
src/: library.cpp  main.cpp
src/moqui/base/: mqi_aperture.hpp  mqi_beam_module_ion.hpp  mqi_beam_module_rt.hpp  mqi_beamline.hpp  mqi_beamsource.hpp  mqi_coordinate_transform.hpp  mqi_dataset.hpp  mqi_distributions.hpp  mqi_error_check.hpp  mqi_file_handler.hpp  mqi_geometry.hpp  mqi_hash_table.hpp  mqi_interaction.hpp  mqi_io.hpp  mqi_material.hpp  mqi_node.hpp  mqi_p_ionization.hpp  mqi_persistent_threads.cpp  mqi_persistent_threads.hpp  mqi_phase2_memory_optimization.cpp  mqi_phase2_memory_optimization.hpp  mqi_phase3_coarse_to_fine.hpp  mqi_phase4_beam_eye_view.cpp  mqi_phase4_config.cpp  mqi_phase4_config.hpp  mqi_phase4_geometry_interface.cpp  mqi_phase4_geometry_interface.hpp  mqi_phase4_plugin_system.hpp  mqi_phase4_voxel_bvh.cpp  mqi_physics_list.hpp  mqi_po_elastic.hpp  mqi_pp_elastic.hpp  mqi_sparse_io.hpp  mqi_standardized_rng.cpp  mqi_track.hpp  mqi_track_stack.hpp  mqi_treatment_session.hpp  mqi_utils.hpp  mqi_vec.hpp  mqi_vertex.hpp  (+1 more)
src/moqui/base/distributions/: mqi_const_1d.hpp  mqi_norm_1d.hpp  mqi_phsp6d.hpp  mqi_phsp6d_fanbeam.hpp  mqi_phsp6d_ray.hpp  mqi_phsp6d_uniform.hpp  mqi_uni_1d.hpp
src/moqui/base/environments/: mqi_phantom_env.hpp  mqi_tps_env.hpp  mqi_xenvironment.hpp
src/moqui/base/materials/: material_table_data.hpp  mqi_patient_materials.hpp
src/moqui/base/scorers/: mqi_scorer_energy_deposit.hpp
src/moqui/kernel_functions/: mqi_download_data.hpp  mqi_kernel_functions.hpp  mqi_transport.hpp  mqi_variables.hpp
src/moqui/treatment_machines/: mqi_treatment_machine_smc_gtr1.hpp  mqi_treatment_machine_smc_gtr2.hpp  spline_interp.hpp
tests/: CMakeLists.txt  test_example.cpp
tps_env/: CMakeLists.txt  moqui_tps.in  tps_env.cpp  tps_env_simple.cpp
